[package]
name = "nblfq"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
no-tagged-ptr = []

[dependencies]
cfg-if = "1.0.3"
portable-atomic = {version = "1.11.1", default-features = false, features = ["require-cas"] }

[dev-dependencies]
fastrand = "2.3.0"
